--- a/.github/workflows/tex_doc.yml
+++ b/.github/workflows/tex_doc.yml
@@ -16,4 +16,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: compile document with pdflatex
-        run: pdflatex -halt-on-error biegel_resume.tex
+        uses: xu-cheng/latex-action@v2
+        with:
+          root_file: biegel_resume.tex
